--- a/postgresql_replication_end.tex
+++ b/postgresql_replication_end.tex
@@ -1,14 +1,14 @@
 \section{Заключение}
 Репликация~--- одна из важнейших частей крупных приложений, которые работают на PostgreSQL. Она помогает 
 распределять нагрузку на базу данных, делать фоновый бэкап одной из копий без нагрузки на центральный сервер, 
-создавать отдельный сервер для логирования и м.д.
+создавать отдельный сервер для логирования и т.д.
 
 В главе было рассмотрено несколько видов репликации PostgreSQL. Нельзя четко сказать какая лучше всех. 
 Slony-I~--- громоздкая и сложная в настройке система, 
-но имеющая в своем арсенале множество функций, таких как поддержка каскадной репликации, отказоустойчивости(failover) 
+но имеющая в своем арсенале множество функций, таких как поддержка каскадной репликации, отказоустойчивости (failover) 
 и переключение между серверами (switchover). В тоже время Londiste не обладает подобным функционалом, 
 но компактный и прост в установке. Bucardo~--- система которая может быть или master-master, или 
 master-slave репликацией, но не может обработать огромные обьекты, нет отказоустойчивости(failover) 
 и переключение между серверами (switchover). RubyRep, как для master-master репликации, 
-очень просто в установке и настройке, но за это ему приходится расплачиватся скоростью работы~--- самый 
-медленный из всех(синхронизация больших обьемов данных между таблицами).
+очень просто в установке и настройке, но за это ему приходится расплачиватся скоростью работы~--- он самый 
+медленный из всех (синхронизация больших обьемов данных между таблицами).
