--- a/postgresql_replication_begin.tex
+++ b/postgresql_replication_begin.tex
@@ -58,7 +58,7 @@ Slony-I использует триггеры PostgreSQL для привязки
 \item \textbf{PGCluster}\footnote{http://pgfoundry.org/projects/pgcluster/}~--- синхронная Multi-Master репликация. 
 Проект на мой взгляд мертв, поскольку уже год не обновлялся.
 
-\item \textbf{pgpool-I/II}\footnote{http://pgpool.projects.postgresql.org/}~--- это замечательная тулза для 
+\item \textbf{pgpool-I/II}\footnote{http://pgpool.projects.postgresql.org/}~--- это замечательный инструмент для 
 PostgreSQL (лучше сразу работать с II версией). Позволяет делать:
 \begin{itemize}
 \item репликацию (в том числе, с автоматическим переключением на резервный stand-by сервер);
@@ -66,7 +66,7 @@ PostgreSQL (лучше сразу работать с II версией). Поз
 \item pooling коннектов;
 \item очередь соединений;
 \item балансировку SELECT-запросов на несколько postgresql-серверов;
-\item разбивать запросы, для параллельного выполнения над большими объемами данных.
+\item разбиение запросов для параллельного выполнения над большими объемами данных.
 \end{itemize}
 
 \item \textbf{Bucardo}\footnote{http://bucardo.org/}~--- асинхронная репликация, которая поддерживает Multi-Master и Master-Slave режимы, 
@@ -80,8 +80,8 @@ Multi-Master репликация.
 
 \item \textbf{Postgres-R}\footnote{http://www.postgres-r.org/}~--- асинхронная Multi-Master репликация.
 
-\item \textbf{RubyRep}\footnote{http://www.rubyrep.org/}~--- написаная на Ruby, асинхронная Multi-Master 
+\item \textbf{RubyRep}\footnote{http://www.rubyrep.org/}~--- написанная на Ruby асинхронная Multi-Master 
 репликация, которая поддерживает PostgreSQL и MySQL.
 \end{itemize}
 
-Это конечно не весь список свободных систем для репликации, но я думаю даже из этого есть что выбрать для PostgreSQL.
+Это, конечно, не весь список свободных систем для репликации, но я думаю даже из него есть что выбрать для PostgreSQL.
